; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isp/extr_isp_freebsd.c_isp_platform_intr_resp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isp/extr_isp_freebsd.c_isp_platform_intr_resp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BIU2400_HCCR = common dso_local global i32 0, align 4
@HCCR_2400_CMD_CLEAR_RISC_INT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @isp_platform_intr_resp(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32*
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @ISP_LOCK(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @isp_intr_respq(i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @ISP_UNLOCK(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @BIU2400_HCCR, align 4
  %14 = load i32, i32* @HCCR_2400_CMD_CLEAR_RISC_INT, align 4
  %15 = call i32 @ISP_WRITE(i32* %12, i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @ISP_LOCK(i32*) #1

declare dso_local i32 @isp_intr_respq(i32*) #1

declare dso_local i32 @ISP_UNLOCK(i32*) #1

declare dso_local i32 @ISP_WRITE(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
